商城后端代码第n+2次提交--图片

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/hs_db02
+    url: jdbc:mysql://localhost:3306/hs_db01
     username: root
     password: 123456
   thymeleaf:
@@ -16,4 +16,6 @@ mybatis-plus:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl  #开启SQL语句打印
 
 server:
-  port: 8081
+  port: 8080
+
+#测试数据库hs_db02
